...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="Back" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:onClick="save"
            android:text="Save" />
    </LinearLayout>

    <EditText
        android:id="@+id/eventNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:hint="Place your event name here: "
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="2"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/eventDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/locationTextView"
        android:layout_below="@+id/locationTextView"
        android:layout_marginTop="18dp"
        android:hint="Place your short description here: "
...
