<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signed_in_landing_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...
    <Button
        android:text="Signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/SignoutButton" />
    <TextView
        android:text="Your Events"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/YourEventsLabel"
        android:layout_alignBaseline="@+id/SignoutButton"
        android:layout_alignBottom="@+id/SignoutButton"
        android:layout_toStartOf="@+id/SignoutButton"
        android:textSize="24sp"
        android:layout_marginEnd="19dp"/>

...
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="top|start"
        android:layout_marginStart="13dp"
        android:id="@+id/addNewEventButton"
        android:elevation="0dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/eventList_Viewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addNewEventButton">

...
