<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#46BD79">

    <TextView
        android:id="@+id/eventItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:maxLines="2"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:maxLines="2"
        android:textColor="#ffffff"
        android:background="@drawable/event_item_border"/>

</LinearLayout>