...
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#46BD79"
    tools:context="comp4350.eventus.ui.ViewEventActivity">

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/editButton"
        android:layout_marginTop="18dp"
        android:allowUndo="true"
        android:maxLines="5"
...
    </ScrollView>

    <TextView
        android:text="Estimated Cost: "
        android:layout_width="1000dp"
        android:layout_height="50dp"
        android:layout_toStartOf="@+id/titleTextView"
        android:layout_below="@+id/descriptionTextView"
        android:layout_marginTop="14dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:id="@+id/estimatedCostTextView"
        android:layout_alignParentEnd="true"/>
...
